# ceph

./: .gitignore  CMakeLists.txt  ceph-osd.spec.in  ceph.conf.debug  ceph.spec.in  do_cmake.sh  install-deps.sh  make-debs.sh  make-dist  make-osd-dist  make-osd-srpm.sh  t2store_cachelog.conf
src/: CMakeLists.txt  ceph_mgr.cc  ceph_osd.cc  vstart.sh
src/ceph-detect-init/ceph_detect_init/: __init__.py
src/ceph-disk/ceph_disk/: main.py
src/common/: config_opts.h  legacy_config_opts.h  options.cc  subsys.h  util.cc
src/crimson/thread/: ThreadPool.cc  ThreadPool.h
src/erasure-code/: ErasureCodePlugin.cc
src/include/: config-h.in.cmake  types.h  util.h
src/librbd/: librbd.cc
src/log/: Log.cc  Log.h
src/messages/: MOSDMap.h
src/mgr/: ActivePyModules.cc  ClusterState.h  DaemonServer.cc  PyOSDMap.cc
src/mon/: MonCommands.h  OSDMonitor.cc  OSDMonitor.h  PGMap.cc  PGMap.h
src/os/: CMakeLists.txt
src/os/bluestore/: BlockDevice.cc  BlockDevice.h  BlueFS.cc  BlueStore.cc  BlueStore.h  CacheDevice.cc  CacheDevice.h  KernelDevice.h
src/os/bluestore/cache/: CMakeLists.txt  aio.c  aio.h  alloc.c  atomic.h  bcache.h  bcache_types.h  bdev.conf.in  bitmap.h  bitops.h  bset.c  bset.h  btree.c  btree.h  closure.c  closure.h  conf.c  conf.h  debug.c  debug.h  delayed_event.c  delayed_event.h  delayed_work.c  delayed_work.h  extents.c  init.c  init.h  io.c  journal.c  journal.h  kfifo.c  kfifo.h  libaio.c  libcache.c  libcache.h  list.h  log.c  log.h  movinggc.c  prefetch.h  (+22 more)
src/os/bluestore/cache/doc/: asok_command.md  bkey.txt  bset_tree.txt
src/os/bluestore/cache/src/include/: config-h.in.cmake
src/os/filestore/: FileStore.cc
src/osd/: OSD.cc  OSD.h  OSDMap.cc  OSDMap.h  PG.cc  PrimaryLogPG.cc  ReplicatedBackend.cc  ReplicatedBackend.h
src/pybind/mgr/: mgr_module.py
src/pybind/mgr/dashboard/frontend/: package-lock.json  package.json
src/pybind/mgr/prometheus/: module.py
src/test/crimson/: test_thread_pool.cc
src/test/filestore/: CMakeLists.txt
systemd/: ceph-disk@.service  ceph-mon@.service  ceph-osd@.service
udev/: 95-ceph-osd.rules
